# prevail-desktop

./: .env  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASING.md  SECURITY.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  Info.plist  binaries  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/automation/: playwright_runner.js  recipes.json
src-tauri/resources/connectors/: catalog.json  cli_providers.json  logos.json
src-tauri/resources/sample-vault/: AGENTS-operating.md  profile.md
src-tauri/resources/sample-vault/_meta/: profile.md  usage.jsonl
src-tauri/resources/sample-vault/benchmark/: README.md
src-tauri/resources/sample-vault/benefits/: MEMORY.md  PROMPTS.md  QUICKSTART.md  config.md  manifest.json  open-loops.md  state.md
src-tauri/resources/sample-vault/brand/: MEMORY.md  PROMPTS.md  QUICKSTART.md  config.md  manifest.json  open-loops.md  state.md
src-tauri/resources/sample-vault/business/: MEMORY.md  PROMPTS.md  QUICKSTART.md  config.md  manifest.json  open-loops.md  state.md
src-tauri/resources/sample-vault/calendar/: PROMPTS.md  QUICKSTART.md  _state.md  _tasks.md  config.md  goals.md  manifest.json  open-loops.md  soul.md  state.md
src-tauri/resources/sample-vault/career/: PROMPTS.md  QUICKSTART.md  _state.md  _tasks.jsonl  _tasks.md  config.md  goals.md  manifest.json  open-loops.md  soul.md  state.md
src-tauri/resources/sample-vault/chief/: MEMORY.md  PROMPTS.md  QUICKSTART.md  _state.md  _tasks.md  config.md  goals.md  manifest.json  open-loops.md  soul.md  state.md
src-tauri/resources/sample-vault/complete/: PROMPTS.md  QUICKSTART.md
src-tauri/resources/sample-vault/content/: MEMORY.md  PROMPTS.md  QUICKSTART.md  config.md  manifest.json  open-loops.md  state.md
src-tauri/resources/sample-vault/core/: PROMPTS.md  QUICKSTART.md
src-tauri/resources/sample-vault/data/: .prevail-data-layout
src-tauri/resources/sample-vault/estate/: MEMORY.md  PROMPTS.md  QUICKSTART.md  config.md  manifest.json  open-loops.md  state.md
src-tauri/resources/sample-vault/explore/: MEMORY.md  PROMPTS.md  QUICKSTART.md  _state.md  config.md  goals.md  manifest.json  open-loops.md  soul.md  state.md
src-tauri/resources/sample-vault/fitness/: _state.md  _tasks.jsonl  _tasks.md  config.md  goals.md  manifest.json  soul.md
src-tauri/resources/sample-vault/food/: PROMPTS.md  _state.md  _tasks.jsonl  config.md  goals.md  soul.md
src-tauri/resources/sample-vault/health/: MEMORY.md  PROMPTS.md  QUICKSTART.md  _state.md  _tasks.md  config.md  goals.md  manifest.json  open-loops.md  soul.md  state.md
src-tauri/resources/sample-vault/home/: PROMPTS.md  QUICKSTART.md  _state.md  config.md  goals.md  manifest.json  open-loops.md  soul.md  state.md
src-tauri/resources/sample-vault/homestead/: MEMORY.md  PROMPTS.md  _state.md  _tasks.md  config.md  goals.md  manifest.json  soul.md
src-tauri/src/: activity.rs  appcmds.rs  approval.rs  benchmark.rs  broker.rs  bunker.rs  chat.rs  children.rs  clis.rs  composio.rs  consolidate.rs  default_ideal_state.md  discord_bridge.rs  distill.rs  domain.rs  email_bridge.rs  engine.rs  favicon.rs  gateway_log.rs  google.rs  hooks.rs  idealstate.rs  integrations.rs  intent_daemon.rs  intents.rs  lib.rs  loops.rs  main.rs  nango.rs  native_bridge.rs  normalize.rs  omega.rs  paths.rs  reminders.rs  retrospect.rs  runtime_connectors.rs  settings.rs  skillgen.rs  slack_bridge.rs  surface.rs  (+13 more)
src-tauri/src/ingestion/: README.md  keychain.rs  mod.rs  storage.rs  tier_a_mcp.rs  tier_b_composio.rs  tier_c_browser.rs  tier_d_cli.rs
(+1167 files in other folders)
