[package]
name = "prevail-desktop"
version = "0.7.3"
description = "Prevail desktop — native macOS cockpit for AI council deliberation"
authors = ["fru.dev"]
edition = "2021"

[lib]
name = "prevail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros"] }
libc = "0.2"
sha2 = "0.10"
robius-authentication = "0.1.1"
