[package]
name = "prevail-desktop"
version = "0.7.8"
description = "Prevail desktop — native macOS cockpit for AI council deliberation"
authors = ["example.com"]
edition = "2021"

[lib]
name = "prevail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tiny_http = "0.12"
# In-process HTTP (Telegram bot API) so the bot token never lands on a process
# command line. default-features off keeps http2/h2 out of the tree (HTTP/1.1 is
# all the Telegram API needs); default-tls = macOS Secure Transport, no OpenSSL.
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros"] }
libc = "0.2"
sha2 = "0.10"
robius-authentication = "0.1.1"
