[package]
name = "prevail-desktop"
version = "0.8.12"
description = "Prevail desktop — native macOS cockpit for AI council deliberation"
authors = ["example.com"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "prevail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tiny_http = "0.12"
# In-process HTTP (Telegram bot API) so the bot token never lands on a process
# command line. default-features off keeps http2/h2 out of the tree (HTTP/1.1 is
# all the Telegram API needs); default-tls = macOS Secure Transport, no OpenSSL.
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "net", "time"] }
# A6 native bridges: WebSocket (Discord Gateway / Slack Socket Mode) + email.
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
imap = "2"
native-tls = "0.2"
mailparse = "0.15"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
libc = "0.2"
sha2 = "0.10"
robius-authentication = "0.1.1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
